<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerNotificacionActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/primary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/vernot"
        android:textColor="@color/onPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:text="@string/user_name"
        android:textColor="@color/onPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_logo" />


    <GridLayout
        android:id="@+id/notificacionGridLayout"
        android:layout_width="362dp"
        android:layout_height="86dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_notificacion"
        android:bottom="100dp"
        android:columnCount="2"
        android:padding="15dp"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="186dp"
            android:layout_height="34dp"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/acetaminofen"
            android:gravity="left"
            android:paddingTop="8dp"
            android:text="@string/acetaminofen"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="142dp"
            android:layout_height="81dp"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="1"
            android:gravity="right"
            android:paddingTop="15dp"
            android:text="@string/hora"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="34dp"
            android:layout_row="1"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:text="@string/tomar"
            android:textColor="@color/white80"
            android:textSize="16sp" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/fieldFrecuencia"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificacionGridLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:background="@color/background"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/unavez"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/frecuencia"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="78dp"
                android:background="@color/primary" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fieldCantidad"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldFrecuencia">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:background="@color/background"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/vcantidad"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/cantidad"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="78dp"
                android:background="@color/primary" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/fieldCantidad">

        <TextView
            android:id="@+id/textFormula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/formula_photo"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/imageDownload"
            android:layout_width="62dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/formula_photo"
            android:src="@drawable/download" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="231dp"
        android:layout_height="189dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/foto_formula"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:text="@string/inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/fieldInicio"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInicio">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:background="@color/background"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/hinicio"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/finicio"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="78dp"
                android:background="@color/primary" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/fieldInicio">

        <!-- Primer botón -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_cerrar">
            <ImageView
                android:id="@+id/imagePasar"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:src="@drawable/pasar"
                android:background="@drawable/fondo_circular_white"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:contentDescription="@string/posponer" />
            <TextView
                android:id="@+id/textPasar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagePasar"
                android:text="@string/pasar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- Segundo botón -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_primary">
            <ImageView
                android:id="@+id/imageTomar"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:src="@drawable/tomar"
                android:background="@drawable/fondo_circular_white"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:contentDescription="@string/posponer" />
            <TextView
                android:id="@+id/textTomar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageTomar"
                android:text="@string/toma"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- Tercer botón -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_tertiary">

            <ImageView
                android:id="@+id/imagePospon"
                android:layout_width="63dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/fondo_circular_white"
                android:contentDescription="@string/pospon"
                android:padding="10dp"
                android:src="@drawable/pospon" />
            <TextView
                android:id="@+id/textPospon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagePospon"
                android:text="@string/pospon"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>