<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicineActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/primary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:text="@string/user_name"
        android:textColor="@color/onPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_logo" />

    <Button
        android:id="@+id/buttonMedicine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"

        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondary"
        android:paddingStart="40dp"
        android:text="@string/aspirina"
        android:textAlignment="viewStart"
        android:textColor="@color/onSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <Button
        android:id="@+id/buttonMedicine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondary"
        android:paddingStart="40dp"
        android:text="@string/paracetamol"
        android:textAlignment="viewStart"
        android:textColor="@color/onSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedicine1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMedicine1"
        app:layout_constraintEnd_toEndOf="@+id/buttonMedicine1"
        app:layout_constraintTop_toTopOf="@+id/buttonMedicine1"
        app:srcCompat="@drawable/next" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMedicine2"
        app:layout_constraintEnd_toEndOf="@+id/buttonMedicine2"
        app:layout_constraintTop_toTopOf="@+id/buttonMedicine2"
        app:srcCompat="@drawable/next" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/medicines_title"
        android:textColor="@color/onPrimary"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/back"
        android:textColor="@color/onSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddMedicine"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/primary"
        android:text="@string/add"
        android:textColor="@color/onPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>